GitHub Link added

--- a/Credit_Card_Default_Prediction.ipynb
+++ b/Credit_Card_Default_Prediction.ipynb
@@ -229,7 +229,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **GitHub Link -**"
+        "# **GitHub Link : -**"
       ],
       "metadata": {
         "id": "w6K7xa23Elo4"
@@ -238,7 +238,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/shubhamrai1318/Credit_Card_Default_Prediction"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
