Dataset Info completed

--- a/Credit_Card_Default_Prediction.ipynb
+++ b/Credit_Card_Default_Prediction.ipynb
@@ -528,41 +528,41 @@
           "base_uri": "https://localhost:8080/",
           "height": 296
         },
-        "outputId": "a9781fad-b8cd-4155-f120-a1b35961ad74"
+        "outputId": "eef924d9-d98a-42d5-b69c-e3e8581bfe62"
       },
-      "execution_count": 26,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "          ID  LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  \\\n",
-              "15954  15955      50000    2          1         2   38      2      2      2   \n",
-              "9680    9681     200000    2          2         2   37      2      0      0   \n",
-              "2549    2550      50000    1          3         2   23      2      2      2   \n",
-              "24756  24757     200000    1          3         1   49      0      0      0   \n",
-              "1007    1008     170000    2          2         1   37      0      0      0   \n",
+              "16523  16524      20000    1          3         2   24      0      0      0   \n",
+              "26878  26879     200000    1          4         1   49      0      0      0   \n",
+              "7213    7214     140000    1          1         2   32     -1     -1      2   \n",
+              "12132  12133     280000    2          1         2   27      0      0      0   \n",
+              "16792  16793      30000    1          2         2   34      2      0      0   \n",
               "\n",
               "       PAY_4  ...  BILL_AMT4  BILL_AMT5  BILL_AMT6  PAY_AMT1  PAY_AMT2  \\\n",
-              "15954      0  ...      22651      23275      24902      1400         0   \n",
-              "9680       0  ...     202896     173111     170326      8000      9000   \n",
-              "2549       0  ...      18524      19239      19283      7800       173   \n",
-              "24756      0  ...      54837      56025      59511      2000      2000   \n",
-              "1007       0  ...     136607     133199     135242      6700      6800   \n",
+              "16523      0  ...      19627      19624      19652      1600      1357   \n",
+              "26878      0  ...      50146      50235      48984      1689      2164   \n",
+              "7213       2  ...       5841       5215       8671      3000         0   \n",
+              "12132      0  ...     170059     154387     157832      9000      6000   \n",
+              "16792      4  ...      23961      23289      22779      2000      5500   \n",
               "\n",
               "       PAY_AMT3  PAY_AMT4  PAY_AMT5  PAY_AMT6  default payment next month  \n",
-              "15954      1376      1000      2000         0                           1  \n",
-              "9680       8000      7000      7200     10500                           0  \n",
-              "2549       1000      1000      1000      1000                           0  \n",
-              "24756      2000      2100      4400         0                           0  \n",
-              "1007       4700      4700      5500      5000                           0  \n",
+              "16523      1236       623       653       673                           0  \n",
+              "26878      2500      3480      2500      3000                           0  \n",
+              "7213       5000         0      8671      7000                           0  \n",
+              "12132      6000      6000      6000      6000                           0  \n",
+              "16792         0         0         0      3400                           0  \n",
               "\n",
               "[5 rows x 25 columns]"
             ],
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-40cac810-51e1-4e75-96ba-2f455c6635a3\">\n",
+              "  <div id=\"df-fdc07926-32bd-45b2-9bab-1b60a6cf64c9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -607,83 +607,35 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>15954</th>\n",
-              "      <td>15955</td>\n",
-              "      <td>50000</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>38</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>...</td>\n",
-              "      <td>22651</td>\n",
-              "      <td>23275</td>\n",
-              "      <td>24902</td>\n",
-              "      <td>1400</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1376</td>\n",
-              "      <td>1000</td>\n",
-              "      <td>2000</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9680</th>\n",
-              "      <td>9681</td>\n",
-              "      <td>200000</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>37</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>...</td>\n",
-              "      <td>202896</td>\n",
-              "      <td>173111</td>\n",
-              "      <td>170326</td>\n",
-              "      <td>8000</td>\n",
-              "      <td>9000</td>\n",
-              "      <td>8000</td>\n",
-              "      <td>7000</td>\n",
-              "      <td>7200</td>\n",
-              "      <td>10500</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2549</th>\n",
-              "      <td>2550</td>\n",
-              "      <td>50000</td>\n",
+              "      <th>16523</th>\n",
+              "      <td>16524</td>\n",
+              "      <td>20000</td>\n",
               "      <td>1</td>\n",
               "      <td>3</td>\n",
               "      <td>2</td>\n",
-              "      <td>23</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
+              "      <td>24</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>...</td>\n",
-              "      <td>18524</td>\n",
-              "      <td>19239</td>\n",
-              "      <td>19283</td>\n",
-              "      <td>7800</td>\n",
-              "      <td>173</td>\n",
-              "      <td>1000</td>\n",
-              "      <td>1000</td>\n",
-              "      <td>1000</td>\n",
-              "      <td>1000</td>\n",
+              "      <td>19627</td>\n",
+              "      <td>19624</td>\n",
+              "      <td>19652</td>\n",
+              "      <td>1600</td>\n",
+              "      <td>1357</td>\n",
+              "      <td>1236</td>\n",
+              "      <td>623</td>\n",
+              "      <td>653</td>\n",
+              "      <td>673</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>24756</th>\n",
-              "      <td>24757</td>\n",
+              "      <th>26878</th>\n",
+              "      <td>26879</td>\n",
               "      <td>200000</td>\n",
               "      <td>1</td>\n",
-              "      <td>3</td>\n",
+              "      <td>4</td>\n",
               "      <td>1</td>\n",
               "      <td>49</td>\n",
               "      <td>0</td>\n",
@@ -691,46 +643,94 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>...</td>\n",
-              "      <td>54837</td>\n",
-              "      <td>56025</td>\n",
-              "      <td>59511</td>\n",
-              "      <td>2000</td>\n",
-              "      <td>2000</td>\n",
-              "      <td>2000</td>\n",
-              "      <td>2100</td>\n",
-              "      <td>4400</td>\n",
-              "      <td>0</td>\n",
+              "      <td>50146</td>\n",
+              "      <td>50235</td>\n",
+              "      <td>48984</td>\n",
+              "      <td>1689</td>\n",
+              "      <td>2164</td>\n",
+              "      <td>2500</td>\n",
+              "      <td>3480</td>\n",
+              "      <td>2500</td>\n",
+              "      <td>3000</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1007</th>\n",
-              "      <td>1008</td>\n",
-              "      <td>170000</td>\n",
+              "      <th>7213</th>\n",
+              "      <td>7214</td>\n",
+              "      <td>140000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
               "      <td>2</td>\n",
+              "      <td>32</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>...</td>\n",
+              "      <td>5841</td>\n",
+              "      <td>5215</td>\n",
+              "      <td>8671</td>\n",
+              "      <td>3000</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5000</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8671</td>\n",
+              "      <td>7000</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12132</th>\n",
+              "      <td>12133</td>\n",
+              "      <td>280000</td>\n",
               "      <td>2</td>\n",
               "      <td>1</td>\n",
-              "      <td>37</td>\n",
+              "      <td>2</td>\n",
+              "      <td>27</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>...</td>\n",
-              "      <td>136607</td>\n",
-              "      <td>133199</td>\n",
-              "      <td>135242</td>\n",
-              "      <td>6700</td>\n",
-              "      <td>6800</td>\n",
-              "      <td>4700</td>\n",
-              "      <td>4700</td>\n",
+              "      <td>170059</td>\n",
+              "      <td>154387</td>\n",
+              "      <td>157832</td>\n",
+              "      <td>9000</td>\n",
+              "      <td>6000</td>\n",
+              "      <td>6000</td>\n",
+              "      <td>6000</td>\n",
+              "      <td>6000</td>\n",
+              "      <td>6000</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16792</th>\n",
+              "      <td>16793</td>\n",
+              "      <td>30000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>34</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>...</td>\n",
+              "      <td>23961</td>\n",
+              "      <td>23289</td>\n",
+              "      <td>22779</td>\n",
+              "      <td>2000</td>\n",
               "      <td>5500</td>\n",
-              "      <td>5000</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3400</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "<p>5 rows × 25 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-40cac810-51e1-4e75-96ba-2f455c6635a3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fdc07926-32bd-45b2-9bab-1b60a6cf64c9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -743,8 +743,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-115f193a-0cff-4705-b2cf-0df6a83a16a1\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-115f193a-0cff-4705-b2cf-0df6a83a16a1')\"\n",
+              "    <div id=\"df-c8471053-6911-4dfe-b9b7-3d0ed5fe4c39\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c8471053-6911-4dfe-b9b7-3d0ed5fe4c39')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -801,7 +801,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-115f193a-0cff-4705-b2cf-0df6a83a16a1 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-c8471053-6911-4dfe-b9b7-3d0ed5fe4c39 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -848,12 +848,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-40cac810-51e1-4e75-96ba-2f455c6635a3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-fdc07926-32bd-45b2-9bab-1b60a6cf64c9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-40cac810-51e1-4e75-96ba-2f455c6635a3');\n",
+              "          const element = document.querySelector('#df-fdc07926-32bd-45b2-9bab-1b60a6cf64c9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -875,7 +875,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 64
         }
       ]
     },
@@ -1171,7 +1171,35 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "There are 30000 Rows and 25 Columns/Variables in the dataset.\n",
+        "They are:\n",
+        "\n",
+        "\n",
+        "*   **ID:** ID of each client\n",
+        "*   **LIMIT_BAL:** Amount of given credit\n",
+        "*   **SEX:** Gender (1=male, 2=female)\n",
+        "*   **EDUCATION:**(1=graduate school, 2=university, 3=high school, 4=others)\n",
+        "*   **MARRIAGE:** Marital status (1=married, 2=single, 3=others)\n",
+        "*   **AGE:** Age in years\n",
+        "*   **PAY_0:** Repayment status in September (1=payment delay for 1 month, .....,9=payment delay for nine months)\n",
+        "*   **PAY_2:**Repayment status in August\n",
+        "*   **PAY_3:** Repayment status in July\n",
+        "*   **PAY_4:** Repayment status in June\n",
+        "*   **PAY_5:** Repayment status in May\n",
+        "*   **PAY_6:** Repayment status in April\n",
+        "*   **BILL_AMT1:** Amount of bill statement\n",
+        "*   **BILL_AMT2:** Amount of bill statement\n",
+        "*   **BILL_AMT3:** Amount of bill statement\n",
+        "*   **BILL_AMT4:** Amount of bill statement\n",
+        "*   **BILL_AMT5:** Amount of bill statement\n",
+        "*   **BILL_AMT6:** Amount of bill statement\n",
+        "*   **PAY_AMT1:** Amount of payment in September\n",
+        "*   **PAY_AMT2:** Amount of payment in August\n",
+        "*   **PAY_AMT3:** Amount of payment in July\n",
+        "*   **PAY_AMT4:** Amount of payment in June\n",
+        "*   **PAY_AMT5:** Amount of payment in May\n",
+        "*   **PAY_AMT6:** Amount of payment in April\n",
+        "*   **default payment next month:** The target variable indicating default of payment (1=default, 0=non-default)"
       ],
       "metadata": {
         "id": "gfoNAAC-nUe_"
