Data Wrangling Completed

--- a/Credit_Card_Default_Prediction.ipynb
+++ b/Credit_Card_Default_Prediction.ipynb
@@ -10,6 +10,7 @@
         "w6K7xa23Elo4",
         "yQaldy8SH6Dl",
         "mDgbUHAGgjLW",
+        "HhfV-JJviCcP",
         "Y3lxredqlCYt",
         "3RnN4peoiCZX",
         "x71ZqKXriCWQ",
@@ -1142,7 +1143,7 @@
         "id": "3q5wnI3om9sJ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 701
         },
         "outputId": "1737806d-4726-442e-a8fd-4ddfb914ed1e"
       },
@@ -2248,13 +2249,63 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code to make your dataset analysis ready."
+        "# Write your code to make your dataset analysis ready.\n",
+        "\n",
+        "# Simplifying column names and bringing consistency\n",
+        "df.rename(columns={\"PAY_0\": \"PAY_1\", \"default payment next month\": \"DEFAULT\"}, inplace=True)\n",
+        "df.columns = [name.lower() for name in list(df.columns)]\n",
+        "\n",
+        "# Dropping column \"id\"\n",
+        "df.drop('id', axis = 1, inplace =True)\n",
+        "df.info()"
       ],
       "metadata": {
-        "id": "wk-9a2fpoLcV"
+        "id": "wk-9a2fpoLcV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c85de7a-164a-4628-d429-d6eaa6b21937"
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 30000 entries, 0 to 29999\n",
+            "Data columns (total 24 columns):\n",
+            " #   Column     Non-Null Count  Dtype\n",
+            "---  ------     --------------  -----\n",
+            " 0   limit_bal  30000 non-null  int64\n",
+            " 1   sex        30000 non-null  int64\n",
+            " 2   education  30000 non-null  int64\n",
+            " 3   marriage   30000 non-null  int64\n",
+            " 4   age        30000 non-null  int64\n",
+            " 5   pay_1      30000 non-null  int64\n",
+            " 6   pay_2      30000 non-null  int64\n",
+            " 7   pay_3      30000 non-null  int64\n",
+            " 8   pay_4      30000 non-null  int64\n",
+            " 9   pay_5      30000 non-null  int64\n",
+            " 10  pay_6      30000 non-null  int64\n",
+            " 11  bill_amt1  30000 non-null  int64\n",
+            " 12  bill_amt2  30000 non-null  int64\n",
+            " 13  bill_amt3  30000 non-null  int64\n",
+            " 14  bill_amt4  30000 non-null  int64\n",
+            " 15  bill_amt5  30000 non-null  int64\n",
+            " 16  bill_amt6  30000 non-null  int64\n",
+            " 17  pay_amt1   30000 non-null  int64\n",
+            " 18  pay_amt2   30000 non-null  int64\n",
+            " 19  pay_amt3   30000 non-null  int64\n",
+            " 20  pay_amt4   30000 non-null  int64\n",
+            " 21  pay_amt5   30000 non-null  int64\n",
+            " 22  pay_amt6   30000 non-null  int64\n",
+            " 23  default    30000 non-null  int64\n",
+            "dtypes: int64(24)\n",
+            "memory usage: 5.5 MB\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2268,7 +2319,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "In the process of preparing the credit card default prediction dataset for analysis, the following data manipulations and insights were performed:\n",
+        "\n",
+        "**1.Data Loading:** The dataset was loaded from a CSV file.\n",
+        "\n",
+        "**2.Data Exploration:** The first few rows of the dataset were displayed to get an initial understanding of the data. The info() function was used to check data types and identify any missing values, and the describe() function provided a statistical summary of the numerical columns.\n",
+        "\n",
+        "**3.Missing Value Handling:** Missing values were checked using the isnull().sum() function, and it was found that there were some missing values in the dataset. To deal with missing values, rows with missing values were dropped using the dropna() function. This step ensures that the dataset does not contain any missing values.\n",
+        "\n",
+        "**Insights:**\n",
+        "\n",
+        "The dataset has been prepared for analysis with no missing values, and all features have been encoded into numerical format.\n"
       ],
       "metadata": {
         "id": "LbyXE7I1olp8"
