Visualization Completed (All 15 Charts)

--- a/Credit_Card_Default_Prediction.ipynb
+++ b/Credit_Card_Default_Prediction.ipynb
@@ -4080,12 +4080,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# Pair Plot visualization code\n"
+        "# Pair Plot visualization code\n",
+        "\n",
+        "columns_to_include = ['limit_bal', 'age', 'bill_amt1', 'pay_amt1', 'default']\n",
+        "\n",
+        "# Create the pair plot using seaborn\n",
+        "sns.pairplot(df[columns_to_include], hue='default', markers=['o', 's'], palette={0: 'blue', 1: 'red'})\n",
+        "\n",
+        "# Show the pair plot\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "o58-TEIhveiU"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4100,7 +4108,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "I picked the specific chart (pair plot) because it allows for the visualization of pairwise relationships between multiple variables in a compact and informative manner. The pair plot displays scatter plots for numerical variables and histograms for individual variables along the diagonal, making it easy to identify correlations and distributions in the dataset. This visualization is especially useful when exploring relationships between different features and their impact on the target variable (in this case, 'credit card default')."
       ],
       "metadata": {
         "id": "eMmPjTByveiU"
@@ -4118,7 +4126,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "The insights found from the pair plot are the pairwise relationships and distributions of variables in the 'credit card default' dataset. It allows us to observe patterns of correlation or lack thereof between variables. Additionally, the diagonal histograms provide insights into the individual distribution of each variable. By analyzing the scatter plots and histograms, we can identify potential associations, clusters, outliers, and understand how features may affect the likelihood of credit card default."
       ],
       "metadata": {
         "id": "uPQ8RGwHveiV"
