Data Splitting Commit

--- a/Credit_Card_Default_Prediction.ipynb
+++ b/Credit_Card_Default_Prediction.ipynb
@@ -5202,13 +5202,38 @@
     {
       "cell_type": "code",
       "source": [
-        "# Split your data to train and test. Choose Splitting ratio wisely."
+        "# Split your data to train and test. Choose Splitting ratio wisely.\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Splitting the data into training and testing sets (80% for training and 20% for testing)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Print the shape of the training and testing sets\n",
+        "print(\"Shape of X_train:\", X_train.shape)\n",
+        "print(\"Shape of X_test:\", X_test.shape)\n",
+        "print(\"Shape of y_train:\", y_train.shape)\n",
+        "print(\"Shape of y_test:\", y_test.shape)"
       ],
       "metadata": {
-        "id": "0CTyd2UwEyNM"
+        "id": "0CTyd2UwEyNM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aeb31a87-a201-472f-821b-2022d373a9be"
       },
-      "execution_count": 141,
-      "outputs": []
+      "execution_count": 163,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape of X_train: (24000, 21)\n",
+            "Shape of X_test: (6000, 21)\n",
+            "Shape of y_train: (24000,)\n",
+            "Shape of y_test: (6000,)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5222,7 +5247,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "I have used an 80-20 data splitting ratio, where 80% of the data is used for training and 20% is used for testing. This ratio is a common practice in machine learning for evaluating model performance.\n",
+        "\n",
+        "The reason for choosing an 80-20 split is to strike a balance between having enough data for training the model and having sufficient data for testing and evaluating its performance. By using 80% of the data for training, the model can learn from a substantial amount of examples and potentially capture underlying patterns and relationships in the data."
       ],
       "metadata": {
         "id": "Y2lJ8cobFDb_"
